@@ -1,6 +1,6 @@
 {
   "name": "simp-simpkv",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "author": "simp",
   "summary": "SIMPkv providers",
   "license": "Apache-2.0",
@@ -54,7 +54,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 9.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
